# serializer version: 1
# name: test_binary_sensor[binary_sensor.to_home_going-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.to_home_going',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Going',
    'platform': 'nederlandse_spoorwegen',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'is_going',
    'unique_id': '01K721DZPMEN39R5DK0ATBMSY9-is_going',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[binary_sensor.to_home_going-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by NS',
      'friendly_name': 'To home Going',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.to_home_going',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensor[binary_sensor.to_work_going-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.to_work_going',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Going',
    'platform': 'nederlandse_spoorwegen',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'is_going',
    'unique_id': '01K721DZPMEN39R5DK0ATBMSY8-is_going',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[binary_sensor.to_work_going-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by NS',
      'friendly_name': 'To work Going',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.to_work_going',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
